change:frontend next.js=>react

--- a/frontend/src/common_variables.scss
+++ b/frontend/src/common_variables.scss
@@ -1,6 +1,7 @@
-$main_color: #7fffd4;
+$main_color: #d3a3ff;
 $main_char_color: #000000;
 $sub_char_color: #616161;
 $hover_char_color: #0069466c;
 $hover_background_color: #e7e7e7;
-$hover_border_color: #ccc
+$hover_border_color: #ccc;
+$pc_text_size: 24px;
