--- a/frontend/src/components/common/header.module.scss
+++ b/frontend/src/components/common/header.module.scss
@@ -6,9 +6,17 @@
     border: 1px solid gray;
 
     .logo_container {
+        display: block;
         padding: 10px;
         margin-bottom: 200px;
         cursor: pointer;
+        text-decoration: none;
+
+        p {
+            font-size: 24px;
+            font-weight: bold;
+            color: $main_char_color;
+        }
     }
 
     .post_button {
