--- a/backend/api/static/css/login.css
+++ b/backend/api/static/css/login.css
@@ -7,6 +7,7 @@
     & button {
         background-color: white;
         border: gray solid 1px;
+        border-radius: 10px;
         display: flex;
         margin: 10px auto;
         padding: 5px;
