--- a/frontend/src/common_variables.scss
+++ b/frontend/src/common_variables.scss
@@ -4,4 +4,6 @@ $sub_char_color: #616161;
 $hover_char_color: #0069466c;
 $hover_background_color: #e7e7e7;
 $hover_border_color: #ccc;
+
+$warning_char_color: #ff3333;
 $pc_text_size: 24px;
