add:ユーザページのデザインを改良

--- a/frontend/src/components/common/post.module.scss
+++ b/frontend/src/components/common/post.module.scss
@@ -44,6 +44,12 @@
 
     }
 
+    .anonymous_user {
+        a {
+            pointer-events: none;
+        }
+    }
+
 
     .post_info {
         margin: 16px;
