--- a/frontend/src/pages/user.module.scss
+++ b/frontend/src/pages/user.module.scss
@@ -1,5 +1,53 @@
 @import "../common_variables.scss";
 
+.userpage_container {
+    padding: 10px;
+}
+
+.userinfo_container {
+    display: flex;
+    padding: 10px;
+
+    img {
+        border-radius: 5px;
+        //border: $border_color solid 1px;
+    }
+
+    p {
+        margin: 0;
+        font-size: $pc_strong_size;
+        font-weight: bold;
+        margin: auto 0;
+        margin-left: 30px;
+        cursor: pointer;
+    }
+}
+
+.user_action_items {
+    a {
+        display: block;
+        text-decoration: none;
+        color: $main_char_color;
+        font-size: $pc_small_size;
+        padding: 5px;
+        border: 1px solid $background_color;
+
+        &:hover {
+            transition: background-color 0.3s ease, border-color 0.3s ease;
+            background-color: $hover_background_color;
+            border: 1px solid $hover_border_color;
+            color: $hover_char_color;
+        }
+    }
+
+    .signout {
+        cursor: pointer;
+    }
+}
+
 .feed_content {
-    background-color: bisque;
+    .feeds_introduce {
+        cursor: pointer;
+        font-size: $pc_text_size;
+    }
 }
