--- a/frontend/src/common_variables.scss
+++ b/frontend/src/common_variables.scss
@@ -1,9 +1,13 @@
 $main_color: #d3a3ff;
 $main_char_color: #000000;
 $sub_char_color: #616161;
-$hover_char_color: #0069466c;
+$background_color: #ffffff;
+$border_color: #000000;
+$hover_char_color: #d3a3ff88; //#0069466c;
 $hover_background_color: #e7e7e7;
 $hover_border_color: #ccc;
 
 $warning_char_color: #ff3333;
+$pc_small_size: 16px;
 $pc_text_size: 24px;
+$pc_strong_size: 32px;
