--- a/frontend/src/components/common/button.module.scss
+++ b/frontend/src/components/common/button.module.scss
@@ -1,7 +1,26 @@
 @import "../../common_variables.scss";
 
+
 .button {
-    width: 30%;
-    height: 32px;
-    font-size: $pc_text_size;
+    background-color: $main_color;
+    text-decoration: none;
+    display: flex;
+    border-radius: 4px;
+    border: 1px solid white;
+
+    &:hover {
+        transition: background-color 0.3s ease, border-color 0.3s ease;
+        border: 2px solid $hover_border_color;
+        background-color: $background_color;
+
+        p {
+            color: $main_color;
+        }
+    }
+
+    p {
+        margin: auto;
+        text-align: center;
+        color: $main_char_color;
+    }
 }
