--- a/frontend/src/components/Share/keywords.module.scss
+++ b/frontend/src/components/Share/keywords.module.scss
@@ -4,21 +4,18 @@
     margin-bottom: 50px;
 
     p {
-        text-align: center;
         font-size: 24px;
     }
 
     .change_input_num {
-        width: min(50%, 400px);
-        margin: 0 auto;
         display: flex;
-        flex: auto;
-        justify-content: space-around;
 
-        button {
-            width: 30%;
-            height: 32px;
-            font-size: 24px;
+        a {
+            width: 40px;
+
+            span {
+                font-size: 16px;
+            }
         }
     }
 
@@ -31,7 +28,6 @@
 
             textarea {
                 display: block;
-                margin: 0 auto;
                 padding: 10px;
                 width: 80%;
                 height: 16px;
