--- a/frontend/src/components/common/button.module.scss
+++ b/frontend/src/components/common/button.module.scss
@@ -6,21 +6,21 @@
     text-decoration: none;
     display: flex;
     border-radius: 4px;
-    border: 1px solid white;
+    border: 2px solid $background_color;
 
     &:hover {
         transition: background-color 0.3s ease, border-color 0.3s ease;
         border: 2px solid $hover_border_color;
         background-color: $background_color;
 
-        p {
+        span {
             color: $main_color;
         }
     }
 
-    p {
+    span {
         margin: auto;
-        text-align: center;
         color: $main_char_color;
+        user-select: none;
     }
 }
