change:レスポンシブ対応

--- a/backend/api/templates/account/base.html
+++ b/backend/api/templates/account/base.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <img class="logo_image" src="{%static 'images/linkelli_logo.png'%}" width="100" height="100" />
     <h2 class="title">Linkelli</h2>
     {% block body %}
     {% block content %}
