--- a/backend/api/static/css/login.css
+++ b/backend/api/static/css/login.css
@@ -4,6 +4,10 @@
 }
 
 .social_account {
+    & ul {
+        padding: 0;
+    }
+
     & button {
         background-color: white;
         border: gray solid 1px;
@@ -11,7 +15,8 @@
         display: flex;
         margin: 10px auto;
         padding: 5px;
-        width: 400px;
+        width: min(530px, 80%);
+
 
         &:hover {
             transition: background-color 0.3s ease, border-color 0.3s ease;
@@ -19,9 +24,19 @@
             border: 1px solid #ccc;
         }
 
-        & p {
-            font-size: 24px;
-            margin: auto;
+
+        @media screen and (max-width:530px) {
+            & p {
+                font-size: 20px;
+                margin: auto;
+            }
+        }
+
+        @media screen and (min-width:530px) {
+            & p {
+                font-size: 24px;
+                margin: auto;
+            }
         }
     }
 }
