--- a/backend/mysite/app_static/css/base.css
+++ b/backend/mysite/app_static/css/base.css
@@ -3,16 +3,11 @@ html {
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #d3a3ff66;
     width: min(600px, 80%);
     height: 800px;
     margin: 0 auto;
     padding: 50px;
-
-    .logo_image {
-        display: block;
-        margin: 0 auto;
-    }
 
     .title {
         font-size: 48px;
