--- a/frontend/src/components/common/header.module.scss
+++ b/frontend/src/components/common/header.module.scss
@@ -1,43 +1,134 @@
 @import "../../common_variables.scss";
 
-.header_container {
-    width: 200px;
-    padding: 10px;
-    border: 1px solid gray;
-
-    .logo_container {
-        display: block;
+@media screen and (min-width:530px) {
+    .header_container {
         padding: 10px;
-        margin-bottom: 200px;
-        cursor: pointer;
-        text-decoration: none;
+        border: 1px solid gray;
 
-        p {
-            font-size: 24px;
-            font-weight: bold;
-            color: $main_char_color;
+        .logo_container {
+            display: block;
+            padding: 10px;
+            margin-bottom: 200px;
+            cursor: pointer;
+            text-decoration: none;
+
+            p {
+                font-size: 24px;
+                font-weight: bold;
+                color: $main_char_color;
+            }
+        }
+
+        .account_container {
+            margin-bottom: 20px;
+
+            .account_icon {
+                display: block;
+                margin: auto;
+                width: 50px;
+                height: 50px;
+
+                img {
+                    border-radius: 5px;
+                    width: 100%;
+                }
+            }
+        }
+
+        .post_button {
+            height: 40px;
+            width: 80px;
+            background-color: $main_color;
+            display: flex;
+            margin: 0 auto;
+            border-radius: 4px;
+            border: 1px solid white;
+
+            &:hover {
+                transition: background-color 0.3s ease, border-color 0.3s ease;
+                border: 1px solid $hover_border_color;
+            }
+
+            a {
+                margin: auto;
+                text-decoration: none;
+                text-align: center;
+                color: $main_char_color;
+            }
         }
     }
+}
 
-    .post_button {
-        height: 40px;
-        width: 80px;
-        background-color: $main_color;
+@media screen and (max-width:530px) {
+    .header_container {
+        padding: 5px;
+        border: 1px solid gray;
+        height: 50px;
+        background-color: $background_color;
         display: flex;
-        margin: 0 auto;
-        border-radius: 4px;
-        border: 1px solid white;
 
-        &:hover {
-            transition: background-color 0.3s ease, border-color 0.3s ease;
-            border: 1px solid $hover_border_color;
+        .logo_container {
+            display: block;
+            margin: auto 0;
+            margin-right: auto;
+            cursor: pointer;
+            text-decoration: none;
+
+            width: 40px;
+            height: 40px;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+
+            p {
+                display: none;
+            }
         }
 
-        a {
-            margin: auto;
-            text-decoration: none;
+        .account_container {
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: center;
             text-align: center;
-            color: $main_char_color;
+            margin: auto 0;
+
+            .display_name {
+                display: none;
+            }
+
+            .account_icon {
+                display: block;
+                margin: auto 0;
+                width: 40px;
+                height: 40px;
+
+                img {
+                    border-radius: 5px;
+                }
+            }
+        }
+
+        .post_button {
+            height: 40px;
+            width: 60px;
+            background-color: $main_color;
+            display: flex;
+            margin: auto 10px;
+            border-radius: 4px;
+            border: 1px solid white;
+
+            &:hover {
+                transition: background-color 0.3s ease, border-color 0.3s ease;
+                border: 1px solid $hover_border_color;
+            }
+
+            a {
+                text-decoration: none;
+                text-align: center;
+                color: $main_char_color;
+            }
         }
     }
 }
